[asmita]ADD:added TokenAuthentification Filter in repository

--- a/bookStoreApp/appsettings.json
+++ b/bookStoreApp/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "JwtSecretKey": "useruseruseruseruseruseruseruseruseruser",
+
   "ConnectionStrings": {
 
     "BookStoreAppDB": "Data Source=DESKTOP-RIBMOST;Initial Catalog=BookStoreApp; Integrated Security=True"
